[gd_scene load_steps=2 format=2]

[ext_resource path="res://Playground.gd" type="Script" id=1]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Authorize" type="Button" parent="."]
margin_left = 51.0
margin_top = 28.0
margin_right = 253.0
margin_bottom = 90.0
text = "Authorize"

[node name="AuthorizeCode" type="Button" parent="."]
margin_left = 51.0
margin_top = 115.0
margin_right = 253.0
margin_bottom = 177.0
text = "Submit Code"

[node name="GetCurrentPlaybackInformation" type="Button" parent="."]
margin_left = 53.0
margin_top = 246.0
margin_right = 252.0
margin_bottom = 281.0
text = "Get Playback Information"

[node name="GetCurrentTrack" type="Button" parent="."]
margin_left = 54.0
margin_top = 295.0
margin_right = 255.0
margin_bottom = 330.0
text = "Get Current Track"

[node name="Play" type="Button" parent="."]
margin_left = 58.0
margin_top = 340.0
margin_right = 96.0
margin_bottom = 375.0
text = "Play"

[node name="PlayPause" type="Button" parent="."]
margin_left = 59.0
margin_top = 385.0
margin_right = 140.0
margin_bottom = 420.0
text = "Play/Pause"

[node name="Pause" type="Button" parent="."]
margin_left = 106.0
margin_top = 341.0
margin_right = 156.0
margin_bottom = 376.0
text = "Pause"

[node name="Next" type="Button" parent="."]
margin_left = 168.0
margin_top = 342.0
margin_right = 210.0
margin_bottom = 377.0
text = "Next"

[node name="V20" type="Button" parent="."]
margin_left = 218.0
margin_top = 342.0
margin_right = 254.0
margin_bottom = 377.0
text = "V20"

[node name="Code" type="TextEdit" parent="."]
margin_left = 112.0
margin_top = 189.0
margin_right = 255.0
margin_bottom = 229.0

[node name="Label" type="Label" parent="."]
margin_left = 62.0
margin_top = 201.0
margin_right = 102.0
margin_bottom = 215.0
text = "Code:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 286.0
margin_top = 82.0
margin_right = 326.0
margin_bottom = 96.0
text = "Output:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="."]
margin_left = 283.0
margin_top = 52.0
margin_right = 420.0
margin_bottom = 66.0
text = "State: Not Authorized"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="RichTextLabel" parent="."]
margin_left = 290.0
margin_top = 104.0
margin_right = 976.0
margin_bottom = 513.0
[connection signal="pressed" from="Authorize" to="." method="_on_Authorize_pressed"]
[connection signal="pressed" from="AuthorizeCode" to="." method="_on_AuthorizeCode_pressed"]
[connection signal="pressed" from="GetCurrentPlaybackInformation" to="." method="_on_GetCurrentPlaybackInformation_pressed"]
[connection signal="pressed" from="GetCurrentTrack" to="." method="_on_GetCurrentTrack_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="PlayPause" to="." method="_on_PlayPause_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="V20" to="." method="_on_V20_pressed"]
